update syntax highlighting

--- a/vs_extension/language-configuration.json
+++ b/vs_extension/language-configuration.json
@@ -6,7 +6,7 @@
 	],
 	"comments": {
 		"lineComment": "--",
-		"blockComment": ["--begin", "end--"]
+		"blockComment": ["--(", ")--"]
 	},
 	"indentationRules": {
 		// "increaseIndentPattern": ".*[(\\[{:]$",
